修改字段
