# swagger/swagger.json
@@ -53,7 +53,7 @@
                     },
                     {
                         "in": "query",
-                        "name": "region",
+                        "name": "area",
                         "description": "地区/国家",
                         "required": true,
                         "type": "string"
@@ -110,7 +110,7 @@
                     {
                         "in": "body",
                         "name": "body",
-                        "description": "json格式，包含项年龄:Age,邮箱:Email,游戏:Game,名称:Name,地区/国家:Region,性别:Sexuality,签名:Sign,建议:Suggest,型号:Types,脸书:facebook",
+                        "description": "json格式，包含项年龄:Age,邮箱:Email,游戏:Game,名称:Name,地区/国家:Area,性别:Sexuality,签名:Sign,建议:Suggest,型号:Types,脸书:facebook",
                         "required": true,
                         "schema": {
                             "$ref": "#/definitions/models.SurveyForm"
@@ -137,6 +137,10 @@
                     "description": "年龄",
                     "type": "string"
                 },
+                "Area": {
+                    "description": "地区/国家",
+                    "type": "string"
+                },
                 "Email": {
                     "description": "邮箱",
                     "type": "string"
@@ -151,10 +155,6 @@
                 },
                 "Name": {
                     "description": "年龄",
-                    "type": "string"
-                },
-                "Region": {
-                    "description": "地区/国家",
                     "type": "string"
                 },
                 "Sexuality": {
